--- a/app/src/main/res/layout/activity_car_info_detail.xml
+++ b/app/src/main/res/layout/activity_car_info_detail.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:id="@+id/car_info_car_image"
                 android:src="@drawable/default_car"
                 android:scaleType="fitXY"
                 android:layout_width="match_parent"
@@ -47,6 +48,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_brand"
                     android:text="奥迪Audi"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -72,6 +74,7 @@
                     android:layout_height="wrap_content" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/car_info_detail_logo"
                     android:src="@drawable/garage_light"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -95,6 +98,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_car_type"
                     android:text="奥迪R8 4.2V8FSI"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -120,6 +124,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_car_num"
                     android:text="粤A-3806"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -146,7 +151,8 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:text="V8缸 自然吸气"
+                    android:id="@+id/car_info_detail_engine_num"
+                    android:text="cc-sdfsdf-1234"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -171,6 +177,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_car_level"
                     android:text="4门4座"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -196,6 +203,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_current_amount"
                     android:text="11678"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -221,6 +229,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_amount_of_gas"
                     android:text="21.8L"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -247,6 +256,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_engine_performance"
                     android:text="好"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
@@ -272,11 +282,11 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_transmission_performance"
                     android:text="异常"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:textColor="@color/abnormal_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
@@ -297,6 +307,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/car_info_detail_head_light_performance"
                     android:text="好"
                     android:textSize="@dimen/font_size_14"
                     android:layout_alignParentRight="true"
